# Back-end/routes/purchaseRoutes.js
@@ -5,5 +5,6 @@ const verifyJWT = require('../services/verifyJWT')
 
 router.post("/purchase", verifyJWT, purchaseController.newPurchase)
 router.get("/purchase", verifyJWT, purchaseController.getPurchases)
+router.get("/purchase/:userName", verifyJWT, purchaseController.userPurchases)
 
 module.exports = router
