# Back-end/routes/userRoutes.js
@@ -9,7 +9,8 @@ router.post('/user', userController.newUser)
 router.get('/user', verifyJWT, userController.getUsers)
 router.put('/user/:id', verifyJWT, userController.updateUser)
 router.delete('/user/:id', verifyJWT, userController.deleteUser)
-router.post('/login', userController.loginUser)
-router.get('/user/purchases', verifyJWT, purchaseController.userPurchases)
+router.get('/user/purchases', verifyJWT, userController.currentUserPurchases)
+
+router.post('/login', userController.login)
 
 module.exports = router
